Quorum/Library/Tests/Actions/Pass/Return2ActionsText.quorum
class Main
    action Main
        text a = ""
        output bar(foo(a))
    end

    action foo (text a) returns text
        a = a + "foo"
        return a
    end

    action bar(text a) returns text
        a = a + "bar"
        return a
    end
end