Quorum/Library/Tests/Actions/Fail/VoidReturnWrong.quorum
class Main
    action Test returns boolean
        return now
    end

    action Main
        Test()
    end
end